Bug 1779878 - Reset assertionArray inside the loop of ModuleBuilderInitArray r=mgaudet

We need to reset the `assertionArray` variable if the current entry has no
assertions. Otherwise, the ModuleRequestObject will be created with the
assertions of the previous import.

Differential Revision: https://phabricator.services.mozilla.com/D151969